--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Uber</string>
     <string name="action_settings">Settings</string>
+    <string name="view_request_action_settings">Log out</string>
 
     <string name="uberLogoDescription">Uber Logo</string>
     <string name="riderSwitchSelect">Rider</string>
@@ -13,6 +14,8 @@
     <string name="callUberButton">Call An Uber</string>
     <string name="title_activity_view_request">ViewRequestActivity</string>
     <string name="riderLogOutButton">Log out</string>
+    <string name="title_activity_driver_location">Map</string>
+    <string name="acceptRequestButton">Accept Request</string>
 
 
 </resources>
